--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -59,11 +59,7 @@
 }
 
 .now-viewing-list {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 40px;
-    bottom: 0;
+    position: relative;
     overflow: auto;
 }
 
