--- a/src/main.less
+++ b/src/main.less
@@ -16,6 +16,7 @@
 @explorer-active-tab-color: @highlight-color;
 @explorer-inactive-tab-color: #666666;
 @explorer-panel-close-animation-length: 0.5s;
+@explorer-panel-tab-switch-animation-length: 0.25s;
 
 // Modal panels
 @modal-panel-color: #2F353C;
