--- a/src/Views/ExplorerPanel.html
+++ b/src/Views/ExplorerPanel.html
@@ -18,7 +18,9 @@
         </div>
     </div>
     <div class="explorer-panel-body" data-bind="isOpen, foreach: tabs, css: { 'explorer-panel-body-collapsed': !$root.isOpen }">
-        <div class="explorer-panel-body-pane" data-bind="embeddedComponent: $data, visible: isActive">
+      <div class="explorer-panel-frame" data-bind="css: { 'explorer-panel-frame-inactive-left': !isActive && $index() < $root.activeTabIndex, 'explorer-panel-frame-inactive-right': !isActive && $index() > $root.activeTabIndex }">
+        <div class="explorer-panel-body-pane" data-bind="embeddedComponent: $data">
         </div>
+      </div>
     </div>
 </div>
