--- a/src/Views/NowViewingTab.html
+++ b/src/Views/NowViewingTab.html
@@ -40,7 +40,7 @@
 
     <div class="now-viewing-list" data-bind="visible: nowViewing.items.length === 0">
         <div class="now-viewing-no-items">
-            Add data using the Data Catalogue tab.
+            Add data using the Catalogue tab.
         </div>
     </div>
 </div>
