Don't let long URLs escape their containers.

--- a/src/Styles/CatalogItemInfo.less
+++ b/src/Styles/CatalogItemInfo.less
@@ -20,6 +20,10 @@
     color: #000000;
 }
 
+.catalog-item-info-table td {
+    word-break: break-word;
+}
+
 .catalog-item-info-header {
     border-bottom: 1px solid #9A9A9B;
 }
@@ -67,6 +71,7 @@
     font-size: 10pt;
     font-weight: normal;
     color: #cccccc;
+    word-break: break-word;
 }
 
 .catalog-item-info-field {
