Don't cut off Info icon on Macs, hopefully.

--- a/src/Styles/DataCatalogTab.less
+++ b/src/Styles/DataCatalogTab.less
@@ -89,6 +89,7 @@
     display: table-cell;
     text-align: right;
     width: 20px;
+    vertical-align: middle;
 }
 
 .data-catalog-info-icon {
@@ -96,7 +97,6 @@
     width: 18px;
     height: 18px;
     fill: #CCCCCC;
-    top: 3px;
     margin-right: 16px;
 }
 
