Basic search-as-you-type for locations.

--- a/src/main.less
+++ b/src/main.less
@@ -7,7 +7,7 @@
 @brand-bar-width: 350px; // not counting the diagonal portion
 
 // Panels
-@panel-background-color: #282D32;
+@panel-background-color: #2F353C;
 @panel-opacity: 1.0;
 @panel-border-color: #979797;
 
@@ -40,3 +40,4 @@
 // Tabs on the Explorer Panel
 @import "Styles/DataCatalogTab.less";
 @import "Styles/NowViewingTab.less";
+@import "Styles/SearchTab.less";
