--- a/src/Views/SearchTab.html
+++ b/src/Views/SearchTab.html
@@ -1,5 +1,5 @@
 <div class="search-tab">
-    <form class="search-tab-form" data-bind="submit: search">
+    <form class="search-tab-form" data-bind="submit: activateFirstResult">
         <input class="search-tab-input" placeholder="Search address, landmark, or data set" type="search" data-bind="value: searchText, valueUpdate: 'input'" />
     </form>
     <div class="search-tab-results-area" data-bind="visible: searchText, foreach: searchProviders">
