Make Australian locations visually distinct.

--- a/src/Styles/SearchTab.less
+++ b/src/Styles/SearchTab.less
@@ -95,6 +95,10 @@
     text-decoration: underline;
 }
 
+.search-tab-provider-result-important {
+    font-weight: bold;
+}
+
 .search-tab-provider-result-top-row {
     display: table;
     width: 100%;
