--- a/src/Styles/SearchTab.less
+++ b/src/Styles/SearchTab.less
@@ -118,6 +118,7 @@
     font-style: italic;
     padding-left: 16px;
     padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .search-tab-provider-searching {
@@ -127,4 +128,5 @@
     font-style: italic;
     padding-left: 16px;
     padding-top: 5px;
+    padding-bottom: 5px;
 }
