--- a/src/Styles/Map.less
+++ b/src/Styles/Map.less
@@ -33,3 +33,40 @@
     -o-transition: left @explorer-panel-close-animation-length ease-out;
     transition: left @explorer-panel-close-animation-length ease-out;
 }
+
+
+.cesium-infoBox {
+    top: 104px;
+    right: 100px;
+    border-radius: 0px;
+    border: 1px solid gray;
+    background-color: rgba(0, 0, 0, 0.65);
+    font-family: @default-font;
+    font-size: 14px;
+    font-weight: 300;
+    color: white;
+    box-shadow: 0 0 0 0;
+    z-index: 999;
+}
+
+.cesium-infoBox-body {
+    max-height: 462px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.cesium-infoBox-title {
+    background-color: black;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+}
+
+button.cesium-infoBox-camera {
+    display: none;
+}
+
+.leaflet-container {
+    cursor: auto;
+}
