Create Add Data panel.
Adding data doesn't actually work yet.

--- a/src/main.less
+++ b/src/main.less
@@ -27,6 +27,7 @@
 @import "Styles/Map.less";
 
 // Individual widgets
+@import "Styles/AddDataPanel.less";
 @import "Styles/BrandBar.less";
 @import "Styles/CatalogItemInfo.less";
 @import "Styles/DistanceLegend.less";
