--- a/src/Views/AddDataPanel.html
+++ b/src/Views/AddDataPanel.html
@@ -23,6 +23,7 @@
                         <option value="kml">KML or KMZ</option>
                         <option value="csv">CSV</option>
                         <option value="czml">CZML</option>
+                        <option value="gpx">GPX</option>
                         <option value="other">Other (use conversion service)</option>
                     </select>
                 </label>
