--- a/src/main.less
+++ b/src/main.less
@@ -37,6 +37,7 @@
 @import "Styles/Navigation.less";
 @import "Styles/PopupMessage.less";
 @import "Styles/SearchPanel.less";
+@import "Styles/SettingsPanel.less";
 
 // Tabs on the Explorer Panel
 @import "Styles/DataCatalogTab.less";
