Indicate when the Settings panel is active.

--- a/src/Views/MenuBar.html
+++ b/src/Views/MenuBar.html
@@ -11,7 +11,7 @@
     <!-- /ko -->
 
     <!-- ko if: !href -->
-    <div class="menu-bar-item" data-bind="click: execute, attr: { title: tooltip }">
+    <div class="menu-bar-item" data-bind="click: execute, attr: { title: tooltip }, css: { 'menu-bar-item-enabled': observableToToggle }">
         <!-- ko if: image -->
         <img class="menu-bar-item-image" data-bind="attr: { src: image, width: imageWidth, height: imageHeight }" />
         <!-- /ko -->
