Progress toward base map selection.

--- a/src/Styles/SettingsPanel.less
+++ b/src/Styles/SettingsPanel.less
@@ -57,3 +57,23 @@
     background-color: @highlight-color;
     color: #ffffff;
 }
+
+.settings-panel-base-map-label {
+    padding-bottom: 10px;
+}
+
+.settings-panel-base-map-choices {
+}
+
+.settings-panel-base-map-button {
+    .clickable;
+    border: 1px solid @panel-border-color;
+}
+
+.settings-panel-base-map-button-selected {
+    border: 1px solid @highlight-color;
+}
+
+.settings-panel-base-map-button:hover {
+    border: 1px solid white;
+}
