Hook up Share panel.

--- a/src/main.less
+++ b/src/main.less
@@ -38,6 +38,7 @@
 @import "Styles/PopupMessage.less";
 @import "Styles/SearchPanel.less";
 @import "Styles/SettingsPanel.less";
+@import "Styles/SharePopup.less";
 
 // Tabs on the Explorer Panel
 @import "Styles/DataCatalogTab.less";
