--- a/src/Styles/Core.less
+++ b/src/Styles/Core.less
@@ -75,3 +75,9 @@ a:hover {
     font-family: @default-font;
     color: #ffffff;
 }
+
+@media print {
+    .full-window {
+        position: initial;
+    }
+}
