--- a/src/Styles/SettingsPanel.less
+++ b/src/Styles/SettingsPanel.less
@@ -77,3 +77,9 @@
 .settings-panel-base-map-button:hover {
     border: 1px solid white;
 }
+
+@media print {
+    .settings-panel {
+        display: none;
+    }
+}
