Show feedback on drag/drop.

--- a/src/main.less
+++ b/src/main.less
@@ -31,6 +31,7 @@
 @import "Styles/BrandBar.less";
 @import "Styles/CatalogItemInfo.less";
 @import "Styles/DistanceLegend.less";
+@import "Styles/DragDrop.less";
 @import "Styles/ExplorerPanel.less";
 @import "Styles/LocationBar.less";
 @import "Styles/MenuBar.less";
