--- a/src/Styles/MenuBar.less
+++ b/src/Styles/MenuBar.less
@@ -15,7 +15,7 @@
     font-family: @default-font;
     font-size: 16px;
     line-height: 30px;
-    color: #ffffff;
+    color: green;
     padding-left: 10px;
     padding-right: 10px;
     cursor: pointer;
